fix file management
